[package]
name = "spin-factors"
version = "0.1.0"
edition = "2021"

[dependencies]
spin-factors-derive = { path = "crates/factors-derive" }
wasmtime = { workspace = true }

[dev-dependencies]
wasi-factor = { path = "crates/wasi-factor" }
outbound-http-factor = { path = "crates/outbound-http-factor" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
wasmtime = { path = "../../src/wasmtime/crates/wasmtime", features = ["component-model"] }
wasmtime-wasi = { path = "../../src/wasmtime/crates/wasi" }
wasmtime-wasi-http = { path = "../../src/wasmtime/crates/wasi-http" }