[package]
name = "spin-factors"
version = "0.1.0"
edition = "2021"

[dependencies]
spin-factors-derive = { path = "crates/factors-derive" }
wasmtime = { workspace = true }

[dev-dependencies]
wasi-factor = { path = "crates/wasi-factor" }
outbound-http-factor = { path = "crates/outbound-http-factor" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "3cd96e1780eed0e93e2b560b9e7bccb42f600a13", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "3cd96e1780eed0e93e2b560b9e7bccb42f600a13" }
wasmtime-wasi-http = { git = "https://github.com/bytecodealliance/wasmtime", rev = "3cd96e1780eed0e93e2b560b9e7bccb42f600a13" }