[package]
name = "spin-factors"
version = "0.1.0"
edition = "2021"

[features]
derive-expander = ["spin-factors-derive/expander"]

[dependencies]
anyhow = "1.0"
spin-factors-derive = { path = "crates/factors-derive" }
wasmtime = { workspace = true }

[dev-dependencies]
outbound-http-factor = { path = "crates/outbound-http-factor" }
outbound-networking-factor = { path = "crates/outbound-networking-factor" }
wasi-factor = { path = "crates/wasi-factor" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "3cd96e1780eed0e93e2b560b9e7bccb42f600a13", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "3cd96e1780eed0e93e2b560b9e7bccb42f600a13" }
wasmtime-wasi-http = { git = "https://github.com/bytecodealliance/wasmtime", rev = "3cd96e1780eed0e93e2b560b9e7bccb42f600a13" }